# deepnet-trainer

./: LICENSE  pyproject.toml
src/config/: argparse_config.py
src/training/: torch_setup.py
